# serializer version: 1
# name: test_light[light.klyqa_airpurifier_e85dfc_led-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.RGB: 'rgb'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.klyqa_airpurifier_e85dfc_led',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'LED',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'LED',
    'platform': 'klyqa_pet',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'led',
    'unique_id': 'D83BDAE85DFC_led',
    'unit_of_measurement': None,
  })
# ---
# name: test_light[light.klyqa_airpurifier_e85dfc_led-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: 204,
      <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: <ColorMode.RGB: 'rgb'>,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Klyqa airpurifier E85DFC LED',
      <LightEntityStateAttribute.HS_COLOR: 'hs_color'>: tuple(
        276.0,
        83.333,
      ),
      <LightEntityStateAttribute.RGB_COLOR: 'rgb_color'>: tuple(
        160,
        40,
        240,
      ),
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.RGB: 'rgb'>,
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 0>,
      <LightEntityStateAttribute.XY_COLOR: 'xy_color'>: tuple(
        0.271,
        0.112,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.klyqa_airpurifier_e85dfc_led',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_light[light.living_room_strip-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <LightEntityCapabilityAttribute.MAX_COLOR_TEMP_KELVIN: 'max_color_temp_kelvin'>: 6500,
      <LightEntityCapabilityAttribute.MIN_COLOR_TEMP_KELVIN: 'min_color_temp_kelvin'>: 2700,
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.RGB: 'rgb'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.living_room_strip',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'klyqa_pet',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <LightEntityFeature: 32>,
    'translation_key': 'strip',
    'unique_id': '80659988019C_strip',
    'unit_of_measurement': None,
  })
# ---
# name: test_light[light.living_room_strip-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <LightEntityStateAttribute.BRIGHTNESS: 'brightness'>: 178,
      <LightEntityStateAttribute.COLOR_MODE: 'color_mode'>: <ColorMode.RGB: 'rgb'>,
      <LightEntityStateAttribute.COLOR_TEMP_KELVIN: 'color_temp_kelvin'>: None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Living room strip',
      <LightEntityStateAttribute.HS_COLOR: 'hs_color'>: tuple(
        30.118,
        100.0,
      ),
      <LightEntityCapabilityAttribute.MAX_COLOR_TEMP_KELVIN: 'max_color_temp_kelvin'>: 6500,
      <LightEntityCapabilityAttribute.MIN_COLOR_TEMP_KELVIN: 'min_color_temp_kelvin'>: 2700,
      <LightEntityStateAttribute.RGB_COLOR: 'rgb_color'>: tuple(
        255,
        128,
        0,
      ),
      <LightEntityCapabilityAttribute.SUPPORTED_COLOR_MODES: 'supported_color_modes'>: list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.RGB: 'rgb'>,
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <LightEntityFeature: 32>,
      <LightEntityStateAttribute.XY_COLOR: 'xy_color'>: tuple(
        0.611,
        0.375,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.living_room_strip',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
